CSS spacing issues on front page to keep text from overlapping when using long-word headlines and multiple bylines.

--- a/css/calpress.css
+++ b/css/calpress.css
@@ -452,7 +452,7 @@ body.front article.newsy-front {
 	margin: 0 -1px 0 0;
 	margin-top: -1px;
 	border: 1px solid #e1e1e1;
-	height: 330px;
+	height: 350px;
 }
 
 
@@ -460,7 +460,7 @@ body.front article footer{
 	font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
 	font-size: 10px;
 	position: absolute;
-	top: 325px;
+	top: 346px;
 }
 
 /*===== Carousel ======*/
